update external objects examples

--- a/html/geometriesExternalObjectsInfo.html
+++ b/html/geometriesExternalObjectsInfo.html
@@ -38,7 +38,7 @@
 		</code>
 
 		<p>
-			In the <i>loadGLTFFile</i> function that we built we pass the model name and path, if it is visible or not and the desired Scale. Inside de function we load the object and finally add the loaded object to the scene. See the code fragment below to see the main parts of the function.
+			In the <i>loadGLTFFile</i> function that we built we pass the model name and path, if it is visible or not and the desired Scale. Inside the function we load the object and finally add the loaded object to the scene. See the code fragment below to see the main parts of the function.
 		</p>
 
 		<code>
