--- a/examples/pathTracingExample1.html
+++ b/examples/pathTracingExample1.html
@@ -13,7 +13,7 @@
 	<body>
       <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
       <script type="importmap"> 
-        {"imports": {"three": "../../build/three.module.js"}} 
+        {"imports": {"three": "../build/three.module.js"}} 
       </script>  
 
 		<div id="container"> </div>
