--- a/html/pathTracingExample1Info.html
+++ b/html/pathTracingExample1Info.html
@@ -13,8 +13,13 @@
 		<hr>
 
 		<p>
-         This example is based on the Path Tracing implementation of Erichlof available 
+         This example is based on the GPU based Path Tracing implementation of Erichlof available 
          <a href="https://github.com/erichlof/THREE.js-PathTracing-Renderer" target="_blank">here</a>.
+      </p>
+      <p>
+         Click on the scene to start interacting (ESC to return). When interacting, use mouse movements 
+         to rotate camera, scroll to zoom (change fov), keyboard left and right arrow keys to change 
+         aperture, up and down arrows keys to change focus.
       </p>
 
 		<iframe src="../examples/pathTracingExample1.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
