--- a/html/pathTracingExample1Info.html
+++ b/html/pathTracingExample1Info.html
@@ -21,9 +21,9 @@
          <ul>
             <li>WASD/QZ + mouse movements to control 1st person camera;</li>
             <li>Mousewheel to zoom in and out;</li>
-            <li>O and P keys toggle Orthographic and Perspective camera modes</li>
+            <li>O and P keys toggle Orthographic and Perspective camera modes;</li>
             <li>Left/Right arrow keys control camera's aperture size (depth of field blur effect);</li>
-            <li>Up/Down arrow keys control the Focal point distance from the camera</li>
+            <li>Up/Down arrow keys control the Focal point distance from the camera;</li>
             <li>ESC key to exit and return the mouse pointer</li>
          </ul>
       </p>
