new geometric transformation example

--- a/examples/geometricTransformation3.html
+++ b/examples/geometricTransformation3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geometric Transformation</title>
+    <title>Geometric Transformation II</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -14,8 +14,8 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <div id="webgl-output">        
-    <script type="module" src="geometricTransformation2.js"></script>
+  <div id="webgl-output">              
+    <script type="module" src="geometricTransformation3.js"></script>
   </div>
 </body>
 </html>
