degrees to radians removed

--- a/html/geometricTransformation2Info.html
+++ b/html/geometricTransformation2Info.html
@@ -13,8 +13,8 @@
 		<hr>
 
 		<p>When we add an object to another object, the local and world position of this object might be different.
-         In the following example, a sphere was added to a cube. When we move the cube, the local transformation of the sphere
-         is the same, but the world position of the sphere changes.
+         In the following example, a sphere was added to a cube. When we move the cube, the local position of the 
+         sphere is the same, but its world position changes.
       </p>
 
 		<iframe src="../examples/geometricTransformation2.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
