--- a/examples/animationLerp.html
+++ b/examples/animationLerp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Linear Interpolation Example</title>
+    <title>Animation - Linear Interpolation</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">      
-    <script type="module" src="exampleLerp.js"></script>
+    <script type="module" src="animationLerp.js"></script>
   </div>
 </body>
 </html>
