--- a/html/animationLerpInfo.html
+++ b/html/animationLerpInfo.html
@@ -25,8 +25,8 @@
 		many ways. In the following example, it was used to move an object between its current position and a new one.
 		</p>
 
-		<iframe src="../examples/exampleLerp.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../examples/exampleLerp.html" target="_blank">Open in a new tab</a>
+		<iframe src="../examples/animationLerp.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../examples/animationLerp.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
