--- a/examples/AR_Multi.html
+++ b/examples/AR_Multi.html
@@ -18,7 +18,7 @@
   </script> 
 
   <div id="webgl-output">    
-    <script type="module" src="AR_Multi01.js"></script>
+    <script type="module" src="AR_Multi.js"></script>
   </div>
 </body>
 
