AR multi updated

--- a/html/AR_ChooseSourceInfo.html
+++ b/html/AR_ChooseSourceInfo.html
@@ -11,7 +11,10 @@
 		<h1>AR - Sources</h1>
 		<br>
 		<hr>
-		<p>Example using AR.js in which the user can change the input source.</p>
+      <p>
+		Example using AR.js in which the user can change the input source.
+      This example use the <a href="https://github.com/rodrigoluis/CG/blob/gh-pages/assets/AR/kanji.png" target="_blank">Kanji</a> marker.</p>
+      </p>
 
 		<iframe src="../examples/AR_ChooseSource.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../examples/AR_ChooseSource.html" target="_blank">Open in a new tab</a>
