--- a/html/AR_MultiAsOneInfo.html
+++ b/html/AR_MultiAsOneInfo.html
@@ -8,16 +8,16 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>AR - Multi marker (independent)</h1>
+		<h1>AR - Multi Marker (as one)</h1>
 		<br>
 		<hr>
 		<p>
-         Example using ar.js to handle a multi marker setup. 
+         Example using ar.js to handle a multi marker setup that renders one single object.
          This example use a <a href="https://github.com/rodrigoluis/CG/blob/gh-pages/assets/AR/kanji.png" target="_blank">multi marker template</a>.      
-      </p>
+      </p>         
 
-		<iframe src="../examples/AR_Multi.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../examples/AR_Multi.html" target="_blank">Open in a new tab</a>
+		<iframe src="../examples/AR_MultiAsOne.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../examples/AR_MultiAsOne.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
