AR Multi update

--- a/html/AR_BasicInfo.html
+++ b/html/AR_BasicInfo.html
@@ -13,7 +13,7 @@
 		<hr>
 		<p>
          Simple Augmented Reality example using ar.js. 
-         In this example the input is a video in which a <a href="https://github.com/rodrigoluis/CG/blob/gh-pages/assets/AR/kanji.png" target="_blank">Kanji</a> marker is presented.
+         In this example the input is a video in which a <a href="https://raw.githubusercontent.com/rodrigoluis/CG/gh-pages/assets/AR/kanji.png" target="_blank">Kanji</a> marker is presented.
       </p>
 
 		<iframe src="../examples/AR_Basic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
