--- a/html/AR_ChooseSourceInfo.html
+++ b/html/AR_ChooseSourceInfo.html
@@ -13,7 +13,7 @@
 		<hr>
       <p>
 		Example using AR.js in which the user can change the input source.
-      This example use the <a href="https://github.com/rodrigoluis/CG/blob/gh-pages/assets/AR/kanji.png" target="_blank">Kanji</a> marker.</p>
+      This example use the <a href="https://raw.githubusercontent.com/rodrigoluis/CG/gh-pages/assets/AR/kanji.png" target="_blank">Kanji</a> marker.</p>
       </p>
 
 		<iframe src="../examples/AR_ChooseSource.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
