--- a/html/AR_MultiInfo.html
+++ b/html/AR_MultiInfo.html
@@ -13,7 +13,7 @@
 		<hr>
 		<p>
          Example using ar.js to handle a multi marker setup. 
-         This example use a <a href="https://github.com/rodrigoluis/CG/blob/gh-pages/assets/AR/kanji.png" target="_blank">multi marker template</a>.      
+         This example use a <a href="https://raw.githubusercontent.com/rodrigoluis/CG/gh-pages/assets/AR/multi-pattern-template-abcdgf.png" target="_blank">multi marker template</a>.      
       </p>
 
 		<iframe src="../examples/AR_Multi.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
