--- a/html/welcome.html
+++ b/html/welcome.html
@@ -10,9 +10,9 @@
 		<br>
 		<hr>
 
-		<p>On this page you will find the basic projects that support the Computer Graphics course at [link:https://www2.ufjf.br/ufjf/ UFJF].</p>
+		<p>On this page you will find the basic projects that support the [link:https://sites.google.com/site/computacaograficaufjf/ Computer Graphics course] at [link:https://www2.ufjf.br/ufjf/ UFJF].</p>
 
-		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web.</p>
+		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web. You can access our repository [link:https://github.com/rodrigoluis/CG here].</p>
 
 		<h2>Contents</h2>
 
