--- a/examples/raycasterSelection.html
+++ b/examples/raycasterSelection.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Drag Example</title>
+    <title>Selection Example (Ray Caster)</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">      
-    <script type="module" src="exampleDragControl.js"></script>
+    <script type="module" src="raycasterSelection.js"></script>
   </div>
 </body>
 </html>
