Raycaster layers example added

--- a/html/raycasterLayersInfo.html
+++ b/html/raycasterLayersInfo.html
@@ -12,7 +12,7 @@
 		<br>
 		<hr>
 
-		<p>This example show how to use layers to control which objects raycaster can interact with.</p>
+		<p>This example shows how to use layers to control which objects raycaster can interact with.</p>
 
 		<iframe src="../examples/raycasterLayers.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../examples/raycasterLayers.html" target="_blank">Open in a new tab</a>
