News examples added

--- a/examples/exampleCamFollowObj.html
+++ b/examples/exampleCamFollowObj.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multicolor Cube</title>
+    <title>CamFollowObj</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -14,8 +14,8 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <div id="webgl-output">           
-    <script type="module" src="exampleMulticolorCube.js"></script>
+  <div id="webgl-output">      
+    <script type="module" src="exampleCamFollowObj.js"></script>
   </div>
 </body>
 </html>
