Alteração nos exemplos sobre texturas.

--- a/examples/texturedMultiMap.html
+++ b/examples/texturedMultiMap.html
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">           
-    <script type="module" src="exampleMultiTexturedCube.js"></script>
+    <script type="module" src="texturedMultiMap.js"></script>
   </div>
 </body>
 </html>
