Texture advanced changed

--- a/examples/textureAdvancedEnvMapCube.html
+++ b/examples/textureAdvancedEnvMapCube.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Equirectangular Maps</title>
+    <title>Cube Maps</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">           
-    <script type="module" src="textureAdvancedEquirectangularMap.js"></script>
+    <script type="module" src="textureAdvancedEnvMapCube.js"></script>
   </div>
 </body>
 </html>
