--- a/examples/textureAdvancedSkyboxCube.html
+++ b/examples/textureAdvancedSkyboxCube.html
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">           
-    <script type="module" src="textureAdvancedCubeMap.js"></script>
+    <script type="module" src="textureAdvancedSkyboxCube.js"></script>
   </div>
 </body>
 </html>
