Creating 'texture extra' section

--- a/examples/textureExtraTransition.html
+++ b/examples/textureExtraTransition.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Traverse - External Objects with textures</title>
+    <title>Texture Transition</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -14,10 +14,9 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <div id="webgl-output">          
-    <script type="module" src="textureExternalObjectsTraverse.js"></script>
+  <div id="webgl-output">        
+    <script type="module" src="textureExtraTransition.js"></script>
   </div>
 </body>
 </html>
 
-<!DOCTYPE html>
