--- a/examples/textureExtraTraversing.html
+++ b/examples/textureExtraTraversing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Texture Transition</title>
+    <title>Traverse - External Objects with textures</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -14,9 +14,10 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <div id="webgl-output">        
-    <script type="module" src="textureAdvancedTransition.js"></script>
+  <div id="webgl-output">          
+    <script type="module" src="textureExtraTraversing.js"></script>
   </div>
 </body>
 </html>
 
+<!DOCTYPE html>
