--- a/examples/exampleFirstPerson.html
+++ b/examples/exampleFirstPerson.html
@@ -4,8 +4,7 @@
     <title>First Person</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
-    <link rel="stylesheet" href="../html/resources/w3.css">
-    <link rel="stylesheet" href="../html/resources/menu.css">    
+    <link rel="stylesheet" href="../html/resources/menuFirstPerson.css">    
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
